fix unreadable text in snackbars

--- a/rataplan-frontend/src/styles.scss
+++ b/rataplan-frontend/src/styles.scss
@@ -40,38 +40,6 @@ $md-primary: (
                 A700 : #ffffff,
         )
 );
-$md-accent: (
-        50 : #e2e9e5,
-        100 : #b7c8bd,
-        200 : #87a491,
-        300 : #567f65,
-        400 : #326344,
-        500 : #0e4823,
-        600 : #0c411f,
-        700 : #0a381a,
-        800 : #083015,
-        900 : #04210c,
-        A100 : #5dff7e,
-        A200 : #2aff55,
-        A400 : #00f631,
-        A700 : #00dd2c,
-        contrast: (
-                50 : #000000,
-                100 : #000000,
-                200 : #000000,
-                300 : #ffffff,
-                400 : #ffffff,
-                500 : #ffffff,
-                600 : #ffffff,
-                700 : #ffffff,
-                800 : #ffffff,
-                900 : #ffffff,
-                A100 : #000000,
-                A200 : #000000,
-                A400 : #000000,
-                A700 : #000000,
-        )
-);
 $md-warn: (
         50 : #f1e4e7,
         100 : #dbbbc3,
@@ -110,7 +78,7 @@ $md-warn: (
 @use '@angular/material' as mat;
 
 $primary-palette: mat.define-palette($md-primary);
-$accent-palette: mat.define-palette($md-accent);
+$accent-palette: mat.define-palette(mat.$pink-palette);
 $warn-palette: mat.define-palette($md-warn);
 
 $my-theme: mat.define-light-theme($primary-palette, $accent-palette, $warn-palette);
